@@ -16,6 +16,22 @@
             </div>
             <article data-fill-slot="'article'">
                 <h2>
+                    0.37.0 <span class="changes-date">6 Aug 2019</span>
+                </h2>
+                <ul>
+                    <li>Removed jquery dependency in non dev.</li>
+                    <li>Jquery expressions replaced by query expressions.</li>
+                    <li>Bug fixed: jsdom dependency added.</li>
+                    <li>
+                        Added support to run tests using the console:
+                        <ul>
+                            <li>npm run testBrowser   // Run the related to browser tests</li>
+                            <li>npm run testNode      // Run the related to node.js tests</li>
+                            <li>npm run test          // Run all tests</li>
+                        </ul>
+                    </li>
+                </ul>
+                <h2>
                     0.36.1 <span class="changes-date">30 Jul 2019</span>
                 </h2>
                 <ul>
