@@ -3,6 +3,6 @@
 //
 var folderDictionary = {
     'footer-macro': 'footer@templates.html',
-    versionNumber: '0.36.1',
-    versionDate: '30 Jul 2019'
+    versionNumber: '0.37.0',
+    versionDate: '6 Aug 2019'
 };
