@@ -1,6 +1,6 @@
 {
   "name": "zpt",
-  "version": "0.36.1",
+  "version": "0.37.0",
   "main": "./js/app/main.js",
   "description": "Zenon Page Templates - JS (ZPT-JS)",
   "keywords": [
