@@ -18,6 +18,10 @@ New in 0.37.0
 - Removed jquery dependency in non dev.
 - Jquery expressions replaced by query expressions.
 - Bug fixed: jsdom dependency added.
+- Added support to run tests using the console:
+    - npm run testBrowser   // Run the related to browser tests
+    - npm run testNode      // Run the related to node.js tests
+    - npm run test          // Run all tests
 
 New in 0.36.1
 - Dependencies updated.
